# Backend/web/routes.py
@@ -1,21 +1,14 @@
 from sqlalchemy.sql.elements import Null
 from web.views import post_gallery
-from flask import json, render_template, request, jsonify, abort
+from flask import json, render_template, request, jsonify
 from web import views
 # __init__.py 파일에서 정의한 app을 불러옴
 from web import app
 from werkzeug.utils import secure_filename
 from web.predictmix import *
+from errors import InternalServerError
 from sqlalchemy.exc import *
 from sqlalchemy.orm.exc import *
-
-@app.errorhandler(500)
-def error500(error):
-    return jsonify({
-        'success':False,
-        'message': error.description,
-        'status':500
-    })
 
 @app.route('/')
 def hello():
@@ -24,18 +17,15 @@ def hello():
 @app.route('/upload')
 def load_file():
    return render_template('upload.html')
-
-
+	
 @app.route('/api/model', methods = ['POST'])
 def upload_file():
-    if request.method == 'POST':
-        try:
-            img_name=request.form['image_no']
-            f = request.files['file']
-            f.save(secure_filename(f.filename))
-            return mixvideo(img_name, f.filename)
-        except:
-            abort(500,"Something wrong")
+   if request.method == 'POST':
+      img_name=request.form['image_no']
+      f = request.files['file']
+      f.save(secure_filename(f.filename))
+
+      return mixvideo(img_name, f.filename)
 
 # AI모델 결과물 생성
 def mixvideo(img_name,file_name):
@@ -61,65 +51,60 @@ def mixvideo(img_name,file_name):
         'model_id':views.get_model_id(mixedvid)
     })
 
+
 @app.route('/api/model/<model_id>', methods = ['GET', 'DELETE', 'PATCH'])
 def return_result(model_id):
     if request.method == 'GET':
         try:
             result_url = views.get_video_url(model_id)
-            return jsonify({'success' : True, 'model_result' : result_url})
-        except:
-            abort(500,"No model_id in Database")
+            if result_url:
+                return jsonify({'success' : True, 'model_result' : result_url})
+            else:
+                return jsonify({'success' :  False, 'model_result': Null})
+        except Exception:
+            raise InternalServerError
 
     elif request.method == 'DELETE':
         try:
             views.remove_vid(model_id)
+            if views.get_video_url(model_id) == False:
+                return jsonify({'success' : True})
             return jsonify({'success' : True})
-        except:
-            abort(500,"No model_id in Database")
+        except Exception:
+            raise InternalServerError
 
     elif request.method=='PATCH':
         try:
-            if (request.get_json()==None):
-                abort(500,"No request")
             f = request.get_json()
-            try:
-                user_name, category_id = f['model_name'], f['category_no']
-            except:
-                return abort(500,"Wrong request(there is no model_name or category_no)")
-            views.gallery_info(model_id, user_name, category_id)
-            return jsonify({"success" : True})
-        except:
-            abort(500,"No model_id in database")
-
+            user_name, category_id = f['user_name'], f['category_id']
+            if views.gallery_info(model_id, user_name, category_id):
+                return jsonify({"success" : True})
+            else:
+                return jsonify({"success" : False})
+        except Exception:
+            raise InternalServerError
 
 @app.route('/api/model/gallery/<category_no>', methods = ['GET'])
 def getby_emoji(category_no):
-    if not 0<int(category_no)<4:
-        abort(500,"category_no is wrong")
     try:
         datas = views.post_gallery_category(category_no) #list형태로 반환
         result = []
         num = len(datas)
         if num == 0:
-            return jsonify({
-                'success' : True,
-                'message':'No values in request category_no'
-            })
+            return jsonify({'success' : False})
         if num < 4:
             for n in range(num):
                 video = datas[n]
+                print(video)
                 result.append(video.serialize())
         else:
             post_gallery(category_no)
             for n in range(4):
                 video = datas[n]
                 result.append(video.serialize())
-        return jsonify({
-            'success':True,
-            'data': result
-        })
-    except:
-        abort(500, "Something wrong in database")
+        return json.dumps(result)
+    except Exception:
+        raise InternalServerError
         
         
 
